# Sigils

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  sigils.py  test_sigils.py  tsigils.py  wsigils.pyw
.github/workflows/: pythonapp.yml
templates/: index.html
