[tool.poetry]
name = "sigils"
version = "0.1.0"
description = ""
authors = ["jffordem <jffordem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.6"
flask = "^3.1.3"
textual = "^8.2.7"
rich = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
